[gd_scene load_steps=24 format=3 uid="uid://3rwt2r5ampmi"]

[ext_resource type="Script" path="res://Enemy/Enemy.gd" id="1_h8jq6"]
[ext_resource type="Texture2D" uid="uid://ch7scwvb8gcqa" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Packs/Forest/Forest Pack/PNG/sprites/enemies/bee/bee-1.png" id="2_78ohb"]
[ext_resource type="Texture2D" uid="uid://dm2nfna42q77q" path="res://Enemy/ExplosionSpritesheet.png" id="2_kp1m0"]
[ext_resource type="Texture2D" uid="uid://cdg46jq5wk8gk" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Packs/Forest/Forest Pack/PNG/sprites/enemies/bee/bee-2.png" id="3_g8st0"]
[ext_resource type="Texture2D" uid="uid://05wq7foaw7wm" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Packs/Forest/Forest Pack/PNG/sprites/enemies/bee/bee-3.png" id="4_jk2e7"]
[ext_resource type="Texture2D" uid="uid://b0va7x5i05hbh" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Packs/Forest/Forest Pack/PNG/sprites/enemies/bee/bee-4.png" id="5_jy816"]
[ext_resource type="Texture2D" uid="uid://2eyw7c6es2kw" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Packs/Forest/Forest Pack/PNG/sprites/enemies/bee/bee-5.png" id="6_dj6tm"]
[ext_resource type="Texture2D" uid="uid://ciby7obyccjyv" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Packs/Forest/Forest Pack/PNG/sprites/enemies/bee/bee-6.png" id="7_gx3sj"]
[ext_resource type="Texture2D" uid="uid://2mboqxvjhca3" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Packs/Forest/Forest Pack/PNG/sprites/enemies/bee/bee-7.png" id="8_4jq3c"]
[ext_resource type="Texture2D" uid="uid://438gytygp54v" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Packs/Forest/Forest Pack/PNG/sprites/enemies/bee/bee-8.png" id="9_ixi4g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h54dj"]
atlas = ExtResource("2_kp1m0")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pomx"]
atlas = ExtResource("2_kp1m0")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qd5sd"]
atlas = ExtResource("2_kp1m0")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihck3"]
atlas = ExtResource("2_kp1m0")
region = Rect2(0, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8glsr"]
atlas = ExtResource("2_kp1m0")
region = Rect2(96, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxbxw"]
atlas = ExtResource("2_kp1m0")
region = Rect2(192, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxnv8"]
atlas = ExtResource("2_kp1m0")
region = Rect2(0, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx656"]
atlas = ExtResource("2_kp1m0")
region = Rect2(96, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6jxo"]
atlas = ExtResource("2_kp1m0")
region = Rect2(192, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwhgc"]
atlas = ExtResource("2_kp1m0")
region = Rect2(0, 288, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_01kps"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h54dj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pomx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qd5sd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihck3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8glsr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxbxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxnv8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx656")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6jxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwhgc")
}],
"loop": false,
"name": &"Death",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_78ohb")
}, {
"duration": 1.0,
"texture": ExtResource("3_g8st0")
}, {
"duration": 1.0,
"texture": ExtResource("4_jk2e7")
}, {
"duration": 1.0,
"texture": ExtResource("5_jy816")
}, {
"duration": 1.0,
"texture": ExtResource("6_dj6tm")
}, {
"duration": 1.0,
"texture": ExtResource("7_gx3sj")
}, {
"duration": 1.0,
"texture": ExtResource("8_4jq3c")
}, {
"duration": 1.0,
"texture": ExtResource("9_ixi4g")
}],
"loop": true,
"name": &"Fly",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_3sntj"]
radius = 175.345

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b1yeq"]
size = Vector2(20, 21)

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_h8jq6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 0)
sprite_frames = SubResource("SpriteFrames_01kps")
animation = &"Death"

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_3sntj")

[node name="HitDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitDetection"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_b1yeq")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="HitDetection" to="." method="_on_hit_detection_body_entered"]
